# AlarmClock

./: .buildconfig  .gitignore  .sconsign.dblite  LICENSE  SConscript
docs/: pinout.md
src/: rtc.c  (+7 more)
v2/firmware/: .gitignore  CMakeLists.txt  SConscript  SConstruct  main  program.sh
v2/firmware/drivers/avr/: CMakeLists.txt  buttons.cpp  buzzer.cpp  light.cpp  rtc.cpp  screen.cpp  storage.cpp
v2/firmware/drivers/avr/lib/: nokia5110.c  nokia5110.h
v2/firmware/drivers/include/: display.hpp  time.hpp
v2/firmware/drivers/include/drivers/: buttons.hpp  light.hpp  storage.hpp
v2/firmware/drivers/pc/: CMakeLists.txt  buttons.cpp  buzzer.cpp  light.cpp  rtc.cpp  screen.cpp  storage.cpp
v2/firmware/include/: device.hpp  display.hpp  time.hpp
v2/firmware/include/drivers/: buttons.hpp  display.hpp  rtc.hpp  screen.hpp
v2/firmware/lib/: nokia5110.h
v2/firmware/src/: allocation.cpp  display.cpp  main.cpp  main.hpp  time.cpp
v2/firmware/src/core/: CMakeLists.txt  display.cpp  time.cpp
v2/firmware/src/core/alarms/: alarm.cpp  alarm.hpp  alarm_day.cpp  alarm_day.hpp  alarm_manager.cpp  alarm_manager.hpp  alarm_registry.cpp  alarm_registry.hpp
v2/firmware/src/core/menus/: alarm_edit.cpp  alarm_edit.hpp  alarm_list.cpp  alarm_list.hpp  alarm_menu.cpp  alarm_menu.hpp  home.cpp  home.hpp  list_menu.cpp  list_menu.hpp  main_menu.cpp  main_menu.hpp  set_time.cpp  set_time.hpp
v2/firmware/src/core/utils/: chars.hpp  menu_manager.cpp  menu_manager.hpp  menu_utils.cpp  menu_utils.hpp  vector.hpp
v2/firmware/src/drivers/avr/: buttons.cpp  buzzer.cpp  display.cpp  display.hpp  io.hpp  light.cpp  nokia.hpp  rtc.cpp  screen.cpp
v2/firmware/src/drivers/local/: buttons.cpp  display.cpp  rtc.cpp
v2/firmware/src/headers/: buttons.hpp  buzzer.hpp  display.hpp  rtc.hpp
v2/firmware/src/lib/: nokia5110.c
v2/firmware/src/menus/: home.cpp  home.hpp  main_menu.cpp  main_menu.hpp  set_time.cpp  set_time.hpp
v2/firmware/src/tests/: CMakeLists.txt
v2/firmware/src/tests/alarms/: alarm_manager_tests.cpp  alarm_test_runner.cpp  alarm_tests.cpp  vector_tests.cpp
v2/firmware/src/utils/: buttons.cpp  buttons.hpp  buzzer.hpp  display.cpp  display.hpp  heap.hpp  light.cpp  light.hpp  menu_manager.cpp  menu_manager.hpp  menu_utils.cpp  menu_utils.hpp  menus.cpp  menus.hpp  rtc.cpp  rtc.hpp  vector.hpp
v2/firmware/src/utils/alarms/: alarm.cpp  alarm.hpp  alarm_day.hpp  alarm_registry.cpp  alarm_registry.hpp  alarm_trigger.cpp  alarm_trigger.hpp
(+16 files in other folders)
